// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel preset default transpiles ES6+ code properly 1`] = `
"\\"use strict\\";

const constVar = 'someConstVar';
const promise = new Promise(resolve => {
  setTimeout(() => {
    resolve(\`Resolving \${constVar}\`);
  }, 100);
});
function* generator() {
  yield 1;
  yield 2;
  yield 3;
}
const object = {
  a: {
    b: 'b'
  },
  b: {
    a: 'a'
  }
};
const init = async () => {
  const result = await promise();
  for (const a of generator()) {
    console.log(a);
  }
  console.log(object?.a?.b);
  return result;
};
init().then(result => {
  console.log(result);
});"
`;

exports[`Babel preset default transpiles ES6+ code properly with runtimeESModules set to true 1`] = `
"\\"use strict\\";

const constVar = 'someConstVar';
const promise = new Promise(resolve => {
  setTimeout(() => {
    resolve(\`Resolving \${constVar}\`);
  }, 100);
});
function* generator() {
  yield 1;
  yield 2;
  yield 3;
}
const object = {
  a: {
    b: 'b'
  },
  b: {
    a: 'a'
  }
};
const init = async () => {
  const result = await promise();
  for (const a of generator()) {
    console.log(a);
  }
  console.log(object?.a?.b);
  return result;
};
init().then(result => {
  console.log(result);
});"
`;

exports[`Babel preset default transpiles react code properly 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _react = require(\\"react\\");
var _jsxRuntime = require(\\"react/jsx-runtime\\");
// eslint-disable-line import/no-extraneous-dependencies
// eslint-disable-line import/no-extraneous-dependencies

const FCComponent = ({
  title,
  url,
  description
}) => /*#__PURE__*/(0, _jsxRuntime.jsxs)(\\"div\\", {
  className: \\"component-test-babel\\",
  children: [/*#__PURE__*/(0, _jsxRuntime.jsx)(\\"a\\", {
    href: url,
    title: title,
    children: /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"h1\\", {
      children: title
    })
  }), /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"p\\", {
    children: description
  })]
});
FCComponent.defaultProps = {
  title: '',
  url: '',
  description: ''
};
class ClassComponent extends _react.Component {
  componentDidMount() {
    // doing something
  }
  render() {
    const {
      title
    } = this.props;
    return /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"div\\", {
      className: \\"Class Component\\",
      children: /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"h1\\", {
        children: title
      })
    });
  }
}
var _default = exports.default = FCComponent;"
`;

exports[`Babel preset default transpiles without removing proptypes in dev mode 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _react = require(\\"react\\");
var _propTypes = _interopRequireDefault(require(\\"prop-types\\"));
var _jsxDevRuntime = require(\\"react/jsx-dev-runtime\\");
var _jsxFileName = \\"\\"; // eslint-disable-line import/no-extraneous-dependencies
// eslint-disable-line import/no-extraneous-dependencies
function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
const FCComponent = ({
  title,
  url,
  description
}) => /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"div\\", {
  className: \\"component-test-babel\\",
  children: [/*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"a\\", {
    href: url,
    title: title,
    children: /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"h1\\", {
      children: title
    }, void 0, false, {
      fileName: _jsxFileName,
      lineNumber: 7,
      columnNumber: 4
    }, void 0)
  }, void 0, false, {
    fileName: _jsxFileName,
    lineNumber: 6,
    columnNumber: 3
  }, void 0), /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"p\\", {
    children: description
  }, void 0, false, {
    fileName: _jsxFileName,
    lineNumber: 9,
    columnNumber: 3
  }, void 0)]
}, void 0, true, {
  fileName: _jsxFileName,
  lineNumber: 5,
  columnNumber: 2
}, void 0);
FCComponent.propTypes = {
  title: _propTypes.default.string,
  url: _propTypes.default.string,
  description: _propTypes.default.string
};
FCComponent.defaultProps = {
  title: '',
  url: '',
  description: ''
};
class ClassComponent extends _react.Component {
  componentDidMount() {
    // doing something
  }
  render() {
    const {
      title
    } = this.props;
    return /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"div\\", {
      className: \\"Class Component\\",
      children: /*#__PURE__*/(0, _jsxDevRuntime.jsxDEV)(\\"h1\\", {
        children: title
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 34,
        columnNumber: 5
      }, this)
    }, void 0, false, {
      fileName: _jsxFileName,
      lineNumber: 33,
      columnNumber: 4
    }, this);
  }
}
ClassComponent.propTypes = {
  title: _propTypes.default.string.isRequired
};
var _default = exports.default = FCComponent;"
`;

exports[`Babel preset default transpiles without transforming es6 imports 1`] = `
"const constVar = 'someConstVar';
const promise = new Promise(resolve => {
  setTimeout(() => {
    resolve(\`Resolving \${constVar}\`);
  }, 100);
});
function* generator() {
  yield 1;
  yield 2;
  yield 3;
}
const object = {
  a: {
    b: 'b'
  },
  b: {
    a: 'a'
  }
};
const init = async () => {
  const result = await promise();
  for (const a of generator()) {
    console.log(a);
  }
  console.log(object?.a?.b);
  return result;
};
init().then(result => {
  console.log(result);
});"
`;

exports[`Babel preset default transpiles wordpress code properly 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _element = require(\\"@wordpress/element\\");
var _react = require(\\"react\\");
// eslint-disable-line import/no-extraneous-dependencies
// eslint-disable-line import/no-extraneous-dependencies

const FCComponent = ({
  title,
  url,
  description
}) => (0, _element.createElement)(\\"div\\", {
  className: \\"component-test-babel\\"
}, (0, _element.createElement)(\\"a\\", {
  href: url,
  title: title
}, (0, _element.createElement)(\\"h1\\", null, title)), (0, _element.createElement)(\\"p\\", null, description));
FCComponent.defaultProps = {
  title: '',
  url: '',
  description: ''
};
class ClassComponent extends _react.Component {
  componentDidMount() {
    // doing something
  }
  render() {
    const {
      title
    } = this.props;
    return (0, _element.createElement)(\\"div\\", {
      className: \\"Class Component\\"
    }, (0, _element.createElement)(\\"h1\\", null, title));
  }
}
var _default = exports.default = FCComponent;"
`;

exports[`compiles typescript transpiles typescript code properly 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.helloTypeScript = helloTypeScript;
function helloTypeScript(name) {
  return \`Hello \${name}, this is TypeScript!\`;
}"
`;
